[workspace]
members = ["axiom-eth"] #, "axiom-core", "axiom-query", "axiom-codec"]
resolver = "2"

[profile.dev]
opt-level = 3
debug = 2              # change to 0 or 2 for more or less debug info
overflow-checks = true
incremental = true

# Local "release" mode, more optimized than dev but faster to compile than release
[profile.local]
inherits = "dev"
opt-level = 3
# Set this to 1 or 2 to get more useful backtraces
debug = 1
debug-assertions = true
panic = 'unwind'
# better recompile times
incremental = true
lto = "thin"
codegen-units = 16

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = "fat"
# `codegen-units = 1` can lead to WORSE performance - always bench to find best profile for your machine!
codegen-units = 1
panic = "abort"
incremental = false

# For performance profiling
[profile.flamegraph]
inherits = "release"
debug = true

[patch.crates-io]
halo2curves = { git = "https://github.com/scroll-tech/halo2curves", branch = "v0.1.0" }

[patch."https://github.com/privacy-scaling-explorations/bls12_381"]
bls12_381 = { git = "https://github.com/scroll-tech/bls12_381", branch = "feat/impl_scalar_field" }

[patch."https://github.com/privacy-scaling-explorations/halo2"]
halo2_proofs = { git = "https://github.com/axiom-crypto/halo2.git", branch = "scroll_v1.1" }

[patch."https://github.com/scroll-tech/halo2.git"] # Until Scroll merges PR
halo2_proofs = { git = "https://github.com/axiom-crypto/halo2.git", branch = "scroll_v1.1" }

[patch."https://github.com/privacy-scaling-explorations/poseidon.git"]
poseidon = { git = "https://github.com/scroll-tech/poseidon.git", branch = "main" }
